# RaspberryLatte

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  full.code-workspace  requirements.txt  run.sh
RaspberryLatte-pico/: CMakeLists.txt  flash.sh
RaspberryLatte-pico/include/: analog_input.h  autobrew.h  binary_input.h  binary_inputs.h  binary_output.h  brew_parameters.h  errors.h  espresso_machine.h  heater.h  hx711.h  leds.h  lmt01.h  machine_configuration.h  maintainer.h  message_ids.h  nau7802.h  phasecontrol.h  physical_inputs.h  pid.h  pinout.h  pressure_sensor.h  slow_pwm.h  solenoid.h  status_ids.h  uart_bridge.h
RaspberryLatte-pico/src/: espresso_machine.c  main.c
RaspberryLatte-pico/src/components/: analog_input.c  autobrew.c  binary_input.c  binary_inputs.c  binary_output.c  heater.c  hx711.c  hx711.pio  leds.c  lmt01.c  lmt01.pio  loop_rate_limiter.c  maintainer.c  nau7802.c  phasecontrol.c  physical_inputs.c  pid.c  pressure_sensor.c  solenoid.c  uart_bridge.c
RaspberryLatte-pico/src/testing/: hello_pio.pio  i2c.c  phasecontrol.c  zero_cross_test.c
RaspberryLatte-pizero/: AutoBrewScheduler.py  EspressoMachine.py  Logger.py  PID.py  brew_config  brew_config.py  components.py  hello.py  pinout.py  status_ids.py  uart_bridge.py  util.py
RaspberryLatte-pizero/Components/: ACSensor.py  Getter.py  Heater.py  LEDs.py  ModeDial.py  PressureSensor.py  Pump.py  PumpSwitch.py  Scale.py  Solenoid.py  Switches.py  TempSensor.py
RaspberryLatte-stream/: brewlog2  broadcast.py  kalman_test.m  plot_brew.m  scale2flow.m
brew_log_viewers/: brewlog.txt  brewlog2mat.m  broadcast.py
docs/: Settings_folder_tree.txt  error_handeling.txt  ff_comp.xlsx  pressure_transducer.txt  pump_data.m
docs/Program Flow Diagrams/: pump_logic.drawio
firmware/: CMakeLists.txt
firmware/examples/: pid_ex.c  value_flasher_ex.c
firmware/include/: analog_input.h  autobrew.h  binary_input.h  binary_output.h  brew_parameters.h  espresso_machine.h  flow_meter.h  gpio_multi_callback.h  i2c_bus.h  lmt01.h  local_ui.h  machine_parameters.h  machine_settings.h  mb85_fram.h  nau7802.h  phasecontrol.h  pid.h  pinout.h  slow_pwm.h  status_ids.h  value_flasher.h
firmware/include/config/: pinout.h  raspberry_latte_config.h
firmware/include/doc_headers/: module_groups.h
firmware/include/drivers/: flow_meter.h  lmt01.h  mb85_fram.h  nau7802.h  ulka_pump.h
firmware/include/machine_logic/: autobrew.h  espresso_machine.h  local_ui.h  machine_settings.h  ulka_pump.h
firmware/include/utils/: analog_input.h  binary_input.h  binary_output.h  fixed_point.h  gpio_irq_timestamp.h  gpio_multi_callback.h  macros.h  phasecontrol.h  pid.h  slow_pwm.h  thermal_runaway_watcher.h  value_flasher.h  zerocross_timer.h
firmware/src/: espresso_machine.c  local_ui.c  machine_parameters.c  machine_settings.c  main.c
firmware/src/components/: analog_input.c  autobrew.c  binary_input.c  binary_output.c  flow_meter.c  gpio_multi_callback.c  i2c_bus.c  lmt01.c  mb85_fram.c  nau7802.c  phasecontrol.c  pid.c  slow_pwm.c  value_flasher.c
firmware/src/drivers/: flow_meter.c  lmt01.c  lmt01.pio  mb85_fram.c  nau7802.c  ulka_pump.c
firmware/src/machine_logic/: autobrew.c  espresso_machine.c  local_ui.c  machine_settings.c  ulka_pump.c
firmware/src/utils/: analog_input.c  binary_input.c  binary_output.c  fixed_point.c  gpio_irq_timestamp.c  gpio_multi_callback.c  i2c_bus.c  phasecontrol.c  pid.c  slow_pwm.c  thermal_runaway_watcher.c  value_flasher.c
hardware/solid_models/: espresso_scale.step  led_board_mount.step  main_board_mount.step  main_board_pin.step  mode_dial.step  power_supply_mount.step
include/: machine_structs.h  packer.h  phasecontrol.h  physical_inputs.h  pressure_sensor.h  uart.h  uart_bridge.h
pico_firmware/: CMakeLists.txt
pico_firmware/include/: analog_input.h  autobrew.h  binary_input.h  binary_output.h  brew_parameters.h  espresso_machine.h  i2c_bus.h  lmt01.h  loop_rate_limiter.h  nau7802.h  phasecontrol.h  pid.h  pinout.h  slow_pwm.h
pico_firmware/src/: espresso_machine.c  main.c
pico_firmware/src/components/: analog_input.c  autobrew.c  binary_input.c  binary_output.c  i2c_bus.c  lmt01.c  nau7802.c  phasecontrol.c  pid.c  slow_pwm.c
scripts/: flash.sh  flash_over_picoprobe_pi.sh  open_serial.sh  open_serial_picoprobe_macos.sh  open_serial_picoprobe_pi.sh  reset_pico.py  start_gdb_server.sh
sphinx_docs/: Doxyfile  conf.py  index.rst
src/: main.c  main.c~
src/components/: .#hx711.h  LMT01.pio  hx711.pio  hx711.pio~  lmt01.pio  max31855.h  packer.c  phasecontrol.c  phasecontrol.h  phasecontrol.h~  physical_inputs.c  physical_inputs.h  pressure_sensor.c  pressure_sensor.h  uart.c  uart.h  uart_bridge.c
src/testing/: .#hello_pio.pio  hello_pio.pio~
